// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomInput renders correctly 1`] = `
<DocumentFragment>
  <input
    value=""
  />
</DocumentFragment>
`;

exports[`CustomInput renders correctly with props 1`] = `
<DocumentFragment>
  <input
    name="test"
    placeholder="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;
